Notification Dropdown Issue after login - done Service Should Be First column After Login - done Print PDF UI Fix - done Only Image Shift Below Profile after login - done Need Better UI for Form after login - done Remove Message Above Form - done

--- a/public/rbtheme/css/style.css
+++ b/public/rbtheme/css/style.css
@@ -78,7 +78,7 @@ a:hover {
   position: fixed;
   display: none;
   right: 15px;
-  bottom: 15px;
+  bottom: 100px;
   z-index: 99999;
 }
 
@@ -90,7 +90,7 @@ a:hover {
   width: 40px;
   height: 40px;
   border-radius: 50px;
-  background: #006161;
+  background: #333;
   color: #fff;
   transition: all 0.4s;
 }
@@ -261,6 +261,16 @@ li.book_buttons a {
   font-size: 18px;
   position: relative;
   top: 2px;
+}
+
+.width33 {
+  width: 33%;
+  float: left;
+}
+
+.avatar-profile1 {
+  margin-top: -100px;
+  margin-bottom: 16px;
 }
 
 .nav-menu ul {
@@ -1428,6 +1438,7 @@ section {
     max-width: 80%;
     margin: 0 auto 30px auto;
   }
+
 }
 
 @media (max-width: 420px) {
@@ -2314,4 +2325,17 @@ i.font-size-20 {
   height: 110vh;
   width: 100%;
   position: absolute;
+}
+
+.width33 {
+  width: 33%;
+  float: left;
+  margin: 0px;
+}
+
+
+@media (max-width: 530px) {
+  .width33 {
+    width: 100%;
+  }
 }
